k8s/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: first-class
spec:
  controllerName: example.com/gateway-controller
