k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: split-traffic-canary
  namespace: default
spec:
  parentRefs:
  - name: first-gateway
    namespace: default # can be a different namespace
  hostnames:
  - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: first-service
      port: 8080
      weight: 80
    - name: second-service
      port: 8080
      weight: 20
