k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      app: redis
  # NetworkPolicy operates at the Pod level, not the Service level. This means the policy 
  # will still work as long as the traffic originates from the Go Pod and is destined for 
  # the Redis Pod, even if it passes through the ClusterIP Service.
  policyTypes:
  - Ingress
  - Egress  # i.e. to a backup server
  ingress:
  - from:  # (podSelector && namespaceSelector) || ipBlock
    - podSelector:
        matchLabels:
          app: go
      namespaceSelector:  # this can also be its own element: podSelector || namespaceSelector || ipBlock
        matchLabels:
          name: default
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 80
